--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>haushaltsapp</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="https://github.com/Sxorper/Haushalt/blob/gh-pages/manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
