--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     const serviceWorkerVersion = "3738966729";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="https://github.com/Sxorper/Haushalt/blob/gh-pages/flutter.js" defer></script>
+  <script src="https://sxorper.github.io/Haushalt/flutter.js" defer></script>
 </head>
 <body>
   <script>
